# zyaml

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  TODO.md  build.zig  build.zig.zon  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: README.ja.md  plan.md  spec.md
python/zyaml/: __init__.py  _ext.c  _ext.pyi
src/: bench.zig  c_api.zig  error.zig  main.zig  root.zig
src/ast/: value.zig
src/decode/: composer.zig  mod.zig
src/encode/: emitter.zig  mod.zig
src/parser/: anchor.zig  block.zig  directive.zig  flow.zig  mapping.zig  mod.zig  parser.zig  scalar.zig  scanner.zig  token.zig
src/test/: fixtures_test.zig  yaml_test_suite.zig
src/test/fixtures/: 01_scalars.yaml  02_sequences.yaml  03_mappings.yaml  04_flow_style.yaml  05_block_scalars.yaml  06_anchors.yaml  07_multi_document.yaml  08_edge_cases.yaml  09_realistic_config.yaml
src/test/yaml_spec/: collections.zig  comments.zig  edge_cases.zig  errors.zig  escaping.zig  flow_style.zig  indentation.zig  mod.zig  scalars_block.zig  scalars_flow.zig  schemas.zig  structures.zig  tags.zig
tests/: bench.py  profile.py  profile_json.py  test_bindings.py  test_generics.py  test_pyyaml_compat.py
