[project]
name = "zyaml"
version = "0.1.0"
description = "Python bindings for zyaml (YAML 1.2.2 parser in Zig)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8",
    "ruff>=0.11",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
